// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot test 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Join Us
</button>
`;

exports[`Decked out Button test 1`] = `
<button
  className="button -modifier"
  onClick={[Function]}
>
  Join Us
</button>
`;
